Change the justify of the header to "space-evenly"

--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 .high-header {
     display: flex;
     padding: 1rem;  
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 .top-button {
     display: flex;
     padding: 1rem;  
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 ul {
