Add ".items" make flex, center with justify-cont Add gap and padding-top(52px and 30px) flex wrap

--- a/style.css
+++ b/style.css
@@ -24,3 +24,11 @@ ul {
 .hook {
     display: flex;
 }
+
+.items {
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 52px;
+    flex-wrap: wrap;
+}
