--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ ul {
     justify-content: center;
     gap: 52px;
     flex-wrap: wrap;
+    padding-bottom: 100px;
 }
 .body {
     display: flex;
