Set "img" to have height and width of 200px Set ".item" to also have width 200px

--- a/style.css
+++ b/style.css
@@ -38,3 +38,10 @@ ul {
     flex-direction: column;
     text-align: center;
 }
+img {
+    width: 200px;
+    height: 200px;
+}
+.item {
+    width: 200px;
+}
