--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
 .upper-box {
     display: flex;
     justify-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 10rem;
 }
 
 
