--- a/style.css
+++ b/style.css
@@ -47,3 +47,16 @@ img {
     justify-content: center;
     gap: 10rem;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: gray;
+    color: white;
+}
