Change font size, font weight, and color of "hook" (48px, 900, #F9FAF8)

--- a/style.css
+++ b/style.css
@@ -66,3 +66,8 @@ img {
     justify-content: center;
     color: white;
 }
+.hook {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
