--- a/style.css
+++ b/style.css
@@ -43,6 +43,8 @@ ul {
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
 }
 img {
     width: 200px;
