--- a/style.css
+++ b/style.css
@@ -92,6 +92,8 @@ button,
 }
 .quote-con {
     background-color: #E5E7EB;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 .quote {
     font-size: 36px;
