Add div "callto" to ".logo-text" to make a group for they require similar properties

--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ li,
     font-size: 18px;
     color: #E5E7EB;
 }
-.logo-text {
+.logo-text,
+.callto {
     font-size: 24px;
     color: #f9faf8;
     font-weight: bold;
