Add font-size (26px) font-weight (bolder) and text-indent (62rem) for ".quotee"

--- a/style.css
+++ b/style.css
@@ -111,3 +111,8 @@ button,
     color: #1f2937;
     font-weight: 900;
 }
+.quotee {
+    font-size: 26px;
+    font-weight: bolder;
+    text-indent: 62rem;
+}
