--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ button {
     padding: 5px 40px;
     font-size: 20px;
     font-weight: bolder;
+    border-radius: 12px;
 }
 .Signup {
     border-color: #F9FAF8;
